deployment.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      expose: "true"
      project: nodejs-health-check
      provider: nodeshift
      version: 2.0.0
    name: nodejs-health-check-master
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      project: nodejs-health-check
      provider: nodeshift
    type: ClusterIP
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: nodejs-health-check
      project: nodejs-health-check
      provider: nodeshift
      version: 2.0.0
    name: nodejs-health-check-master
  spec:
    replicas: 1
    selector:
      app: nodejs-health-check
      project: nodejs-health-check
      provider: nodeshift
    template:
      metadata:
        labels:
          app: nodejs-health-check
          project: nodejs-health-check
          provider: nodeshift
          version: 2.0.0
      spec:
        containers:
        - image: nodejs-health-check-master
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /api/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          name: nodejs-health-check-master
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: false
        containerNames:
        - nodejs-health-check-master
        from:
          kind: ImageStreamTag
          name: nodejs-health-check-master:latest
      type: ImageChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      project: nodejs-health-check
      provider: nodeshift
      version: 2.0.0
    name: nodejs-health-check-master
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: nodejs-health-check-master
kind: List
metadata: {}
